🐛 Fix z-index on Header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,7 @@
 
   position: fixed;
   top: 0;
+  z-index: 3;
   width: 100%;
   padding: 10px 100px;
   background-color: $secondary-color;
